style(header): fix spacing in header menu

--- a/src/components/Header/header.module.less
+++ b/src/components/Header/header.module.less
@@ -1,6 +1,4 @@
 .container {
-  background-color: pink;
-
   height: 120px;
   display: flex;
 }
