--- a/src/components/Menu/menu.module.less
+++ b/src/components/Menu/menu.module.less
@@ -1,15 +1,15 @@
 .container {
-  background-color: yellow;
-
-  margin: 0;
+  margin: 0 120px 0 328px;
   display: flex;
   flex-grow: 2;
   justify-content: space-between;
   align-items: center;
+  font-size: 14px;
 
   li {
     list-style-type: none;
-    margin: 0;
+    margin: 0 10px;
+    white-space: nowrap;
 
     a {
       text-decoration: none;
